examples/errors/parsing/prim-empty-sort.cn
main : () [impure] =
  let p = New[] 5;
  ()
